Fix horizontal scroll (#40)

--- a/src/static/scss/components/_date-filter.scss
+++ b/src/static/scss/components/_date-filter.scss
@@ -9,7 +9,6 @@
   align-items: center;
   justify-content: center;
 
-  width: 100%;
   height: 100%;
   margin: 0 auto;
   padding: 0 1.5rem;
